Edit mesh fails to draw loose edges in 2.90x when working with high poly count objects #77342

Closed
opened 2020-06-04 05:44:55 +02:00 by Kent Davis · 22 comments

Edit: Bisecting shows bf34b0c8f4 as the cause for the issue.

Also

In #77342#944213, @ideasman42 wrote:
Note that this isn't related to extrude, drawing any loose wire fails in the file provided, unless all faces are deleted (with only faces option).


System Information @Kent-Davis
Operating system: Darwin-19.6.0-x86_64-i386-64bit 64 Bits
Graphics card: AMD Radeon Pro 575 OpenGL Engine ATI Technologies Inc. 4.1 ATI-3.10.6

System Information @Alaska
Operating system: Linux-5.4.0-7634-generic-x86_64-with-debian-bullseye-sid 64 Bits
Graphics card: GTX 1050Ti 440.82

Blender Version
Broken: version: 2.90.0 Alpha, branch: master, commit date: 2020-06-03 18:45, hash: b94ab93dfb
Worked: Blender 2.82a, 2.83.0 release

Short description of error
Extruding a vertex on a sufficiently high poly mesh does not work and can appear to cause small graphical glitches in some cases.

Exact steps for others to reproduce the error

  1. Open Blender 2.90.
  2. Select the cube and sub-divide it a lot (I used a sub-division surface modifier with a level of 5 and applied it)
  3. Enter edit mode on the object and select a vertex.
  4. Attempt to extrude the vertex with E. This will not work. Attempting to do this on low poly objects, or with edges, or faces does not cause the issue.

Here's a .blend file with a high poly cube.

#77342 - Extrustion bug.blend


Original steps to reproduce:

Push the E key not work for Blender 2.90 June 3, 2020
Blender 2.83 it work push the E key I can see.

https://www.patreon.com/posts/3d-model-bugs-14969357
I did remove everything materials, texture, modifier (properties), rigging and thing complete.

BugsBunny v4.0.9.blend

See video
https://youtu.be/FcxkJDrOy9E

Edit: Bisecting shows bf34b0c8f4 as the cause for the issue. Also > In #77342#944213, @ideasman42 wrote: > Note that this isn't related to extrude, drawing any loose wire fails in the file provided, unless all faces are deleted (with only faces option). --- **System Information @Kent-Davis** Operating system: Darwin-19.6.0-x86_64-i386-64bit 64 Bits Graphics card: AMD Radeon Pro 575 OpenGL Engine ATI Technologies Inc. 4.1 ATI-3.10.6 **System Information @Alaska** Operating system: Linux-5.4.0-7634-generic-x86_64-with-debian-bullseye-sid 64 Bits Graphics card: GTX 1050Ti 440.82 **Blender Version** Broken: version: 2.90.0 Alpha, branch: master, commit date: 2020-06-03 18:45, hash: `b94ab93dfb` Worked: Blender 2.82a, 2.83.0 release **Short description of error** Extruding a vertex on a sufficiently high poly mesh does not work and can appear to cause small graphical glitches in some cases. **Exact steps for others to reproduce the error** 1. Open Blender 2.90. 2. Select the cube and sub-divide it a lot (I used a sub-division surface modifier with a level of 5 and applied it) 3. Enter edit mode on the object and select a vertex. 4. Attempt to extrude the vertex with E. This will not work. Attempting to do this on low poly objects, or with edges, or faces does not cause the issue. Here's a .blend file with a high poly cube. [#77342 - Extrustion bug.blend](https://archive.blender.org/developer/F8575682/T77342_-_Extrustion_bug.blend) --- Original steps to reproduce: Push the E key not work for Blender 2.90 June 3, 2020 Blender 2.83 it work push the E key I can see. https://www.patreon.com/posts/3d-model-bugs-14969357 I did remove everything materials, texture, modifier (properties), rigging and thing complete. [BugsBunny v4.0.9.blend](https://archive.blender.org/developer/F8575671/BugsBunny_v4.0.9.blend) See video https://youtu.be/FcxkJDrOy9E
Author

Added subscriber: @Kent-Davis

Added subscriber: @Kent-Davis

#77369 was marked as duplicate of this issue

#77369 was marked as duplicate of this issue
Member

Added subscriber: @Alaska

Added subscriber: @Alaska
Member

I can confirm the issue, but am having trouble pin pointing the issue.

Here's what I know so far:

  1. The issue does not occur in Blender 2.82a.
  2. The issue occurs in Blender 2.90 with the file provided.
  3. However, the issue only occurs with the objects in the file provided. Any new objects added to the scene can be extruded.
  4. If I copy one of the objects from the provided file to a new instance of Blender, it can't be edited, lining up with the cause being the objects.

I will continue to investigate to see if I can recreate the issue from a simple file or pin point the cause with the current model.

I can confirm the issue, but am having trouble pin pointing the issue. Here's what I know so far: 1. The issue does not occur in Blender 2.82a. 2. The issue occurs in Blender 2.90 with the file provided. 3. However, the issue only occurs with the objects in the file provided. Any new objects added to the scene can be extruded. 4. If I copy one of the objects from the provided file to a new instance of Blender, it can't be edited, lining up with the cause being the objects. I will continue to investigate to see if I can recreate the issue from a simple file or pin point the cause with the current model.
Author

Yes correct. not matter vertex, edge cause problem on 2.90 I was work and make me frustrate start over, start over many times yesterday and today.

When open Blender 2.90 Alpha there cube is fine extruded.
I got download and clean up everything complete and extrude any edge and/or vertex cause bug of 2.90.

Yes correct. not matter vertex, edge cause problem on 2.90 I was work and make me frustrate start over, start over many times yesterday and today. When open Blender 2.90 Alpha there cube is fine extruded. I got download and clean up everything complete and extrude any edge and/or vertex cause bug of 2.90.
Member

I've found the cause, updating the description to reflect this. I will also bisect the issue to find the commit.

I've found the cause, updating the description to reflect this. I will also bisect the issue to find the commit.
Author

Really good job @Alaska

Really good job @Alaska
Campbell Barton changed title from Push the E key have bug. to Edit mesh fails to draw loose edges in 2.90x in some cases 2020-06-04 06:08:37 +02:00
Alaska changed title from Edit mesh fails to draw loose edges in 2.90x in some cases to Extruding a vertex on a sufficiently high poly mesh does not work (2.90) 2020-06-04 06:08:49 +02:00

Added subscriber: @ideasman42

Added subscriber: @ideasman42

Note that this isn't related to extrude, drawing any loose wire fails in the file provided, unless all faces are deleted (with only faces option).

Note that this isn't related to extrude, drawing any loose wire fails in the file provided, unless all faces are deleted (with only faces option).
Alaska changed title from Extruding a vertex on a sufficiently high poly mesh does not work (2.90) to Edit mesh fails to draw loose edges in 2.90x when working with high poly count objects 2020-06-04 06:09:29 +02:00
Member

Changed the name back. Will start the bisect now unless you know the commit already @ideasman42

Changed the name back. Will start the bisect now unless you know the commit already @ideasman42
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Added subscriber: @Jeroen-Bakker

Added subscriber: @Jeroen-Bakker
Member

Bisect shows bf34b0c8f4 as the cause.

@Jeroen-Bakker, mind taking a look.

Updating the description to include the bisect information.

Bisect shows bf34b0c8f4b8 as the cause. @Jeroen-Bakker, mind taking a look. Updating the description to include the bisect information.
Author

Oh really. Good job. Thank you for fix correct english. My not good english I do know sign language.

Oh really. Good job. Thank you for fix correct english. My not good english I do know sign language.
Author

I just test what you said very excellent correct answer yaaa ay.

I just test what you said very excellent correct answer yaaa ay.
Member

Added subscriber: @YAFU

Added subscriber: @YAFU
Author

Push the F key is bug while between from vertex to vertex too.

Push the F key is bug while between from vertex to vertex too.

Added subscriber: @Morphin

Added subscriber: @Morphin
Jeroen Bakker self-assigned this 2020-06-08 08:36:35 +02:00
Member

Comfirm. It could be related to my change. Not sure what the real cause is. as this part is single threaded.

Comfirm. It could be related to my change. Not sure what the real cause is. as this part is single threaded.
Member
diff --git a/source/blender/draw/intern/draw_cache_extract_mesh.c b/source/blender/draw/intern/draw_cache_extract_mesh.c
index 06462d5b9c5..ff54ab5827e 100644
--- a/source/blender/draw/intern/draw_cache_extract_mesh.c
+++ b/source/blender/draw/intern/draw_cache_extract_mesh.c
@@ -4674,11 +4674,8 @@ static void mesh_render_data_update_task_data_free(MeshRenderDataUpdateTaskData
   MEM_freeN(taskdata);
 }
 
-static void mesh_extract_render_data_node_exec(void *__restrict task_data)
+static void mesh_extract_render_data_node_exec(void *__restrict UNUSED(task_data))
 {
-  MeshRenderDataUpdateTaskData *update_task_data = task_data;
-  mesh_render_data_update(
-      update_task_data->mr, update_task_data->iter_type, update_task_data->data_flag);
 }
 
 static struct TaskNode *mesh_extract_render_data_node_create(struct TaskGraph *task_graph,
@@ -4688,6 +4685,7 @@ static struct TaskNode *mesh_extract_render_data_node_create(struct TaskGraph *t
 {
   MeshRenderDataUpdateTaskData *task_data = MEM_mallocN(sizeof(MeshRenderDataUpdateTaskData),
                                                         __func__);
+  mesh_render_data_update(mr, iter_type, data_flag);
   task_data->mr = mr;
   task_data->iter_type = iter_type;
   task_data->data_flag = data_flag;

Solves the issue. Means that the split of the mesh_render_data isn't working as expected. Will investigate.

``` diff --git a/source/blender/draw/intern/draw_cache_extract_mesh.c b/source/blender/draw/intern/draw_cache_extract_mesh.c index 06462d5b9c5..ff54ab5827e 100644 --- a/source/blender/draw/intern/draw_cache_extract_mesh.c +++ b/source/blender/draw/intern/draw_cache_extract_mesh.c @@ -4674,11 +4674,8 @@ static void mesh_render_data_update_task_data_free(MeshRenderDataUpdateTaskData MEM_freeN(taskdata); } -static void mesh_extract_render_data_node_exec(void *__restrict task_data) +static void mesh_extract_render_data_node_exec(void *__restrict UNUSED(task_data)) { - MeshRenderDataUpdateTaskData *update_task_data = task_data; - mesh_render_data_update( - update_task_data->mr, update_task_data->iter_type, update_task_data->data_flag); } static struct TaskNode *mesh_extract_render_data_node_create(struct TaskGraph *task_graph, @@ -4688,6 +4685,7 @@ static struct TaskNode *mesh_extract_render_data_node_create(struct TaskGraph *t { MeshRenderDataUpdateTaskData *task_data = MEM_mallocN(sizeof(MeshRenderDataUpdateTaskData), __func__); + mesh_render_data_update(mr, iter_type, data_flag); task_data->mr = mr; task_data->iter_type = iter_type; task_data->data_flag = data_flag; ``` Solves the issue. Means that the split of the mesh_render_data isn't working as expected. Will investigate.

This issue was referenced by ab8a691431

This issue was referenced by ab8a6914317f6fc287fbe176df0b7ef202468d26
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#77342
No description provided.